dati-semantic-wordpress/deploymentConfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: dati-semantic-wordpress
  namespace: ndc-dev
  labels:
    application: dati-semantic-wordpress
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    deploymentConfig: dati-semantic-wordpress
  template:
    metadata:
      name: dati-semantic-wordpress
      creationTimestamp: null
      labels:
        application: dati-semantic-wordpress
        deploymentConfig: dati-semantic-wordpress
    spec:
      containers:
        - resources:
            limits:
              cpu: 800m
              memory: 2048Mi
            requests:
              cpu: 250m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 2
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 2
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: dati-semantic-wordpress
          ports:
            - name: wordpress
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: wordpress-persistent-storage
              mountPath: /var/www/schema.gov.it/wp-content
      volumes:
        - name: wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: wp-pv-claim
      restartPolicy: Always
      terminationGracePeriodSeconds: 75
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
