dati-semantic-wordpress/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: dati-semantic-wordpress
  namespace: ndc-dev
  labels:
    application: dati-semantic-wordpress
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    deploymentConfig: dati-semantic-wordpress
  sessionAffinity: None
