dati-semantic-wordpress/ingress-no-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: dati-semantic-wordpress-ingress-no-tls
 annotations:
   kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: example-wordpress
              servicePort: 80
    - host: www.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: example-wordpress
              servicePort: 80
